--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "doctrine/data-fixtures" : "dev-master",
         "nelmio/alice": "1.5.*@dev",
         "knplabs/knp-menu": "dev-master",
-        "knplabs/knp-menu-bundle": "dev-master"
+        "knplabs/knp-menu-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "scripts": {
         "post-install-cmd": [
