--- a/src/Bookshop/BookshopBundle/Resources/config/services.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/services.yml
@@ -2,6 +2,8 @@ parameters:
 #    bookshop_bookshop.example.class: Bookshop\BookshopBundle\Example
 
 services:
-#    bookshop_bookshop.example:
-#        class: %bookshop_bookshop.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    acme_user.registration.form.type:
+            class: Bookshop\BookshopBundle\Form\Type\RegistrationFormType
+            arguments: [%fos_user.model.user.class%]
+            tags:
+                - { name: form.type, alias: bookshop_user_registration }
