view/edit profile 50% + cart index twig + added 3 colls layout

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,9 @@ fos_user:
         confirmation:
             enabled:    true
             template: BookshopBookshopBundle:Registration:email.txt.twig
+    resetting:
+        email:
+            template: BookshopBookshopBundle:Resetting:email.txt.twig
+    profile:
+        form:
+            type: bookshop_user_profile
