finished edit/view profile

--- a/src/Bookshop/BookshopBundle/Resources/config/routing.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/routing.yml
@@ -11,3 +11,7 @@ category:
 cart:
   pattern: cart
   defaults: { _controller: BookshopBookshopBundle:Cart:index}
+
+profile:
+  pattern: profile/min
+  defaults: { _controller: BookshopBookshopBundle:Profile:showMinim}
