--- a/src/Bookshop/BookshopBundle/Resources/config/services.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/services.yml
@@ -2,12 +2,12 @@ parameters:
 #    bookshop_bookshop.example.class: Bookshop\BookshopBundle\Example
 
 services:
-    acme_user.registration.form.type:
+    bookshop_user.registration.form.type:
             class: Bookshop\BookshopBundle\Form\Type\RegistrationFormType
             arguments: [%fos_user.model.user.class%]
             tags:
                 - { name: form.type, alias: bookshop_user_registration }
-    acme_user.registration.form.type:
+    bookshop_user.profile.form.type:
             class: Bookshop\BookshopBundle\Form\Type\ProfileFormType
             arguments: [%fos_user.model.user.class%]
             tags:
