created Address entity linked 'one:one' to User + fixtures + show billing Address

--- a/src/Bookshop/BookshopBundle/Resources/config/routing.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/routing.yml
@@ -15,3 +15,11 @@ cart:
 profile:
   pattern: profile/min
   defaults: { _controller: BookshopBookshopBundle:Profile:showMinim}
+  
+dashboard_index:
+  pattern: dashboard/
+  defaults: { _controller: BookshopBookshopBundle:Dashboard:index}
+dashboard_billing_address_show:
+  pattern: dashboard/billingAddress
+  defaults: { _controller: BookshopBookshopBundle:Dashboard:billingAddressShow}
+  
