--- a/src/Bookshop/BookshopBundle/Resources/config/routing.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/routing.yml
@@ -19,7 +19,23 @@ profile:
 dashboard_index:
   pattern: dashboard/
   defaults: { _controller: BookshopBookshopBundle:Dashboard:index}
+
+
 dashboard_billing_address_show:
   pattern: dashboard/billingAddress
   defaults: { _controller: BookshopBookshopBundle:Dashboard:billingAddressShow}
+
+dashboard_billing_addr_preedit:
+  pattern: dashboard/billingAddress/preedit
+  defaults: { _controller: BookshopBookshopBundle:Dashboard:billingAddressPreEdit}
   
+dashboard_billing_addr_new_edit:
+  pattern: dashboard/billingAddress/edit
+  defaults: { _controller: BookshopBookshopBundle:Dashboard:billingAddressEdit}
+  
+dashboard_billing_addr_edit:
+  pattern: dashboard/billingAddress/edit
+  defaults: { _controller: BookshopBookshopBundle:Dashboard:billingAddressEdit}
+  requirements:
+    _method: POST
+        
