--- a/src/Bookshop/BookshopBundle/Resources/config/services.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/services.yml
@@ -2,6 +2,10 @@ parameters:
 #    bookshop_bookshop.example.class: Bookshop\BookshopBundle\Example
 
 services:
+#  link_service.twig.extension:
+#    class: Bookshop\BookshopBundle\Twig\Extensions\LinkServiceExtension
+#    tags:
+#       - { name: twig.extension }
 #    bookshop_bookshop.example:
 #        class: %bookshop_bookshop.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
