Search functionality with filters

--- a/src/Bookshop/BookshopBundle/Resources/config/routing.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/routing.yml
@@ -14,3 +14,9 @@ product:
   requirements:
         _method:  GET
         id: \d+
+search:
+  pattern: search/
+  defaults: { _controller: BookshopBookshopBundle:Search:search}
+  requirements:
+    _method: GET
+        
