--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -64,3 +64,23 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+#FOS User
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: Bookshop\BookshopBundle\Entity\User
+    service:
+        mailer: fos_user.mailer.twig_swift
+    registration:
+        form:
+            type: bookshop_user_registration
+        confirmation:
+            enabled:    true
+            template: BookshopBookshopBundle:Registration:email.txt.twig
+    resetting:
+        email:
+            template: BookshopBookshopBundle:Resetting:email.txt.twig
+    profile:
+        form:
+            type: bookshop_user_profile
