--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "knplabs/knp-menu-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "knplabs/knp-paginator-bundle": "dev-master",
-        "gedmo/doctrine-extensions": "2.3.*@dev"
+        "gedmo/doctrine-extensions": "2.3.*@dev",
+        "stof/doctrine-extensions-bundle": "1.1.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
