created new bundle AdminBundle and restricted it to ROLE_ADMIN

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+bookshop_admin:
+    resource: "@BookshopAdminBundle/Resources/config/routing.yml"
+    prefix:   /admin
+
 bookshop_bookshop:
     resource: "@BookshopBookshopBundle/Resources/config/routing.yml"
     prefix:   /
