--- a/src/Bookshop/BookshopBundle/Resources/config/services.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/services.yml
@@ -2,6 +2,11 @@ parameters:
 #    bookshop_bookshop.example.class: Bookshop\BookshopBundle\Example
 
 services:
+    login_listener:
+        class: 'Bookshop\BookshopBundle\Listener\LoginListener'
+        arguments: ['@security.context', '@doctrine']
+        tags:
+            - { name: 'kernel.event_listener', event: 'security.interactive_login' }
 #  link_service.twig.extension:
 #    class: Bookshop\BookshopBundle\Twig\Extensions\LinkServiceExtension
 #    tags:
