checkout payment & bugs on checkout

--- a/src/Bookshop/BookshopBundle/Resources/config/routing.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/routing.yml
@@ -79,6 +79,9 @@ shipping_method:
 payment:
   pattern: checkout/payment
   defaults: { _controller: BookshopBookshopBundle:Checkout:payment}
+review:
+  pattern: checkout/review
+  defaults: { _controller: BookshopBookshopBundle:Checkout:review}
 
 profile:
   pattern: profile/min
