--- a/src/Bookshop/BookshopBundle/Resources/config/routing.yml
+++ b/src/Bookshop/BookshopBundle/Resources/config/routing.yml
@@ -11,7 +11,7 @@ bookshop_bookhop_set_locale:
     
 category:
   pattern: category/{id}
-  defaults: { _controller: BookshopBookshopBundle:Category:category}
+  defaults: { _controller: BookshopBookshopBundle:Category:show}
   requirements:
         _method: GET
         id: \d+
